# swagger-output.json
@@ -131,13 +131,6 @@
         "description": "登入功能",
         "parameters": [
           {
-            "name": "Authorization",
-            "in": "header",
-            "description": "Optional pre-authentication token",
-            "required": false,
-            "type": "string"
-          },
-          {
             "name": "obj",
             "in": "body",
             "description": "登入功能",
@@ -215,7 +208,12 @@
             },
             "description": "Internal server error."
           }
-        }
+        },
+        "security": [
+          {
+            "apiKeyAuth": []
+          }
+        ]
       }
     },
     "/users/profile": {
